[project]
name = "flask-realip"
version = "1.1.0"
description = "Flask extension to get real IP addresses behind proxies"
readme = "README.md"
authors = [
    {name = "TN3W", email = "tn3w@protonmail.com"}
]
license = "Apache-2.0"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["Flask", "netaddr"]

[project.urls]
Homepage = "https://github.com/tn3w/flask-realip"
Documentation = "https://github.com/tn3w/flask-realip"
Repository = "https://github.com/tn3w/flask-realip.git"
Issues = "https://github.com/tn3w/flask-realip/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flask_realip"]